Configure Surefire plugin to not fail